feat: add initial structure
