# backend/src/trigger/trigger-types/TriggerTypeEnum.ts
@@ -1,4 +1,5 @@
 export enum TriggerTypeEnum {
     TWITTER_USER_MENTION = "TWITTER_USER_MENTION",
+    BINANCE_AVG_PRICE_ABOVE = "BINANCE_AVG_PRICE_ABOVE",
     NO_ACTION_DEFAULT = "NO_ACTION_DEFAULT",
 }
