# backend/src/trigger/trigger-types/all-meta-types.dto.ts
@@ -1,4 +1,5 @@
 import { ApiPropertyOptional } from "@nestjs/swagger";
+import { BinanceAverageAboveMeta } from "./binance-avg-above/meta-data";
 import { NoActionTestMeta } from "./no-action-test/meta-data";
 import { TwitterUserMentionMeta } from "./twitter-user-mention/meta-data";
 
@@ -8,4 +9,7 @@ export default class AllMetaTypes {
 
     @ApiPropertyOptional()
     public noActionTestMeta?: NoActionTestMeta;
+
+    @ApiPropertyOptional()
+    public binanceAboveAverageMeta?: BinanceAverageAboveMeta;
 }
