# backend/src/trigger/trigger-types/binance-avg-above/meta-data.ts
@@ -1,0 +1,10 @@
+import { ApiProperty } from "@nestjs/swagger";
+import TriggerMeta from "../meta.dto";
+
+export class BinanceAverageAboveMeta extends TriggerMeta {
+    @ApiProperty()
+    public binanceSymbol!: string;
+
+    @ApiProperty()
+    public aboveLimit!: number;
+}
